[project]
name = "anaplan-orm"
version = "0.1.0"
description = "Python library that abstracts the Anaplan API into ORM"
authors = [
    {name = "Valerio D'Alessio"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "jmespath (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.6,<0.16.0)"
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E = pycodestyle errors
# F = pyflakes (unused variables, bad imports)
# I = isort (alphabetize and group imports)
select = ["E", "F", "I"]
# Ignore lines that are too long if they are just strings/URLs
ignore = ["E501"] 

[tool.ruff.format]
# Use double quotes for strings (standard Python convention)
quote-style = "double"
# Use spaces instead of tabs
indent-style = "space"