[project]
name = "anaplan-orm"
version = "1.1.0"
description = "An Object-Relational Mapper (ORM) for the Anaplan API using Pydantic."
authors = [
    {name = "Valerio DAlessio", email = "valdal14@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["anaplan", "orm", "pydantic", "data-engineering", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "cryptography>=46.0.5,<47.0.0",
    "jmespath>=1.1.0,<2.0.0",
    "lxml>=6.0.2,<7.0.0",
    "aiofiles (>=25.1.0,<26.0.0)"
]

[project.urls]
Repository = "https://github.com/valdal14/anaplan-orm"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.15.6,<0.16.0"
pytest-asyncio = "^1.3.0"
respx = "^0.22.0"
pytest-cov = "^7.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocstrings = {extras = ["python"], version = "^1.0.3"}

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E = pycodestyle errors
# F = pyflakes (unused variables, bad imports)
# I = isort (alphabetize and group imports)
select = ["E", "F", "I"]
# Ignore lines that are too long if they are just strings/URLs
ignore = ["E501"] 

[tool.ruff.format]
# Use double quotes for strings (standard Python convention)
quote-style = "double"
# Use spaces instead of tabs
indent-style = "space"

[tool.coverage.run]
omit = [
    "src/anaplan_orm/logger.py"
]